# cartlog

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  duties.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: create-release.yml  reusable-tests.yml  test-docker-build.yml
alembic/: env.py
alembic/versions/: 39363b6358bf_initial_schema.py  5f9629baa350_auth_and_rbac.py  6991acadaeb4_correct_per_each_price_misread_as_count_.py  69c08714c0c2_re_clean_per_each_count_sizes_.py  6f9493d28254_add_folder_ingest_config.py  79cdbf39248c_backfill_and_drop_legacy_measure_columns.py  9dfb068b8256_add_structured_measure_columns.py  a1b2c3d4e5f6_add_line_item_normalization.py  b72b4a0eb208_add_parse_cost_events_ledger.py  e7f93bc5409b_size_capture_columns.py  fc67dfa1aa8c_ingestion_job_uploader.py
scripts/: docker_entry.sh
src/cartlog/: __init__.py  backup.py  bootstrap.py  cli.py  cli_progress.py  clock.py  config.py  constants.py  exceptions.py  normalization.py  units.py
src/cartlog/analytics/: __init__.py  cli.py  export.py  ranges.py  results.py  search_sort.py  service.py
src/cartlog/auth/: __init__.py  app_config.py  config.py  passwords.py  ratelimit.py  security.py  sessions.py  tokens.py  users.py
src/cartlog/categories/: __init__.py  reclassify.py  service.py
src/cartlog/db/: __init__.py  backfill.py  base.py  categories.yaml  cli.py  merge.py  models.py  query_helpers.py  seed.py  session.py  sort.py
src/cartlog/ingest/: __init__.py  cost.py  folder_watcher.py  persistence.py  pipeline.py  queue.py  review.py  worker.py
src/cartlog/parsing/: __init__.py  category_classifier.py  factory.py  llm_parser.py  parser.py  pricing.py  schema.py  size_extractor.py  structuring.py
src/cartlog/products/: __init__.py  service.py
src/cartlog/receipts/: __init__.py  cli.py  service.py
src/cartlog/sizes/: __init__.py  extract.py
src/cartlog/stores/: __init__.py  service.py
src/cartlog/web/: __init__.py  app.py  assets.py  auth.py  dependencies.py  forms.py  guards.py  htmx.py  insights.py  jobs_view.py  middleware.py  security.py  sort.py  templating.py  units_display.py  viz.py
src/cartlog/web/assets/: app.css
src/cartlog/web/routers/: __init__.py  account.py  admin.py  analytics.py  auth_routes.py  categories.py  dashboard.py  health.py  insights.py  integrations.py  jobs.py  preferences.py  receipts.py  settings.py  setup.py  tokens.py  users.py
src/cartlog/web/static/: charts.js  insights.js  receipt_edit.js
src/cartlog/web/templates/: base.html  categories.html  charts.html  dashboard.html  insights.html  integrations.html  jobs.html  receipt_detail.html  receipt_list.html  search.html  settings.html  upload.html
src/cartlog/web/templates/admin/: index.html  products.html  store_merges.html  stores.html  transformations.html  users.html
src/cartlog/web/templates/auth/: _setup_access.html  _setup_account.html  _setup_done.html  account.html  change_password.html  login.html  setup.html
src/cartlog/web/templates/insights/: _category_spend.html  _price_history.html  _spend_over_time.html  _store_comparison.html  _top_products.html
src/cartlog/web/templates/macros/: admin.html  forms.html  sortable.html  ui.html
tests/: __init__.py  conftest.py  factories.py  test_backup.py  test_bootstrap.py  test_cli.py  test_cli_progress.py  test_config.py  test_migrations.py  test_normalization.py  test_security.py  test_units.py
tests/analytics/: __init__.py  conftest.py  test_category_unit_comparison.py  test_cli.py  test_dashboard.py  test_export.py  test_normalized_analytics.py  test_parsing_cost.py  test_product_pareto.py  test_ranges.py  test_service.py  test_spend_over_time.py  test_store_pair.py
tests/auth/: __init__.py  test_app_config.py  test_models.py  test_passwords.py  test_ratelimit.py  test_security.py  test_sessions.py  test_tokens.py  test_users.py
tests/categories/: __init__.py  test_models.py  test_normalize.py  test_reclassify.py  test_service.py
tests/db/: __init__.py  test_backfill.py  test_line_item_normalization_columns.py  test_models.py  test_normalize_measures_cli.py  test_per_each_price_migration.py  test_seed.py  test_session.py  test_structured_measure_migration.py
tests/e2e/: __init__.py  conftest.py  test_insights_consistency_e2e.py  test_receipt_quantity_display_e2e.py  test_search_inline_edit_e2e.py  test_sold_by_toggle_e2e.py  test_spend_over_time_e2e.py  test_store_comparison_e2e.py
tests/ingest/: __init__.py  test_folder_watcher.py  test_persistence.py  test_pipeline.py  test_queue.py  test_review.py  test_worker.py
tests/parsing/: __init__.py  test_category_classifier.py  test_factory.py  test_llm_parser.py  test_llm_parser_prompt.py  test_parser_protocol.py  test_pricing.py  test_schema.py  test_size_extractor.py  test_structuring.py
tests/products/: __init__.py  test_service.py
tests/receipts/: __init__.py  conftest.py  test_cli.py  test_service.py
tests/sizes/: __init__.py  test_extract.py
tests/stores/: __init__.py  test_normalize.py  test_service.py
tests/web/: __init__.py  conftest.py  helpers.py  test_account.py  test_admin.py  test_admin_products.py  test_admin_stores.py  test_admin_transformations.py  test_analytics_api.py  test_api_tokens.py  test_app.py  test_assets.py  test_categories.py  test_cookie_security.py  test_csrf.py  test_dashboard.py  test_delete.py  test_dependencies.py  test_export.py  test_forms.py  test_health.py  test_insights.py  test_insights_fragments.py  test_insights_spend_over_time.py  test_insights_store_comparison.py  test_insights_top_products.py  test_integrations.py  test_integrations_folder.py  test_jobs.py  test_jobs_view.py  test_login.py  test_normalized_display_web.py  test_pages.py  test_public_read.py  test_rbac.py  test_rbac_matrix.py  test_receipts_source.py  test_reparse.py  test_review.py  test_review_ui_visibility.py  (+12 more)
(+34 files in other folders)
