[project]
    authors = [{ name = "Nathaniel Landau", email = "github@natelandau.com" }]
    dependencies = [
        "alembic>=1.18.4",
        "anthropic>=0.109.1",
        "fastapi>=0.137.0",
        "jinja2>=3.1.6",
        "pydantic-ai>=1.44.0",
        "pydantic-settings>=2.14.1",
        "pydantic>=2.13.4",
        "python-multipart>=0.0.32",
        "rich>=15.0.0",
        "sqlalchemy>=2.0.50",
        "typer>=0.26.7",
        "uvicorn>=0.49.0",
]
    description = "Scan and parse grocery receipts to track prices and spending over time."
    keywords = ["anthropic", "cli", "expenses", "fastapi", "grocery", "receipts", "spending"]
    license = "MIT"
    license-files = ["LICENSE"]
    name = "cartlog"
    readme = "README.md"
    requires-python = ">=3.14"
    version = "0.1.0"

    [project.scripts]
        cartlog = "cartlog.cli:app"

    [project.urls]
        Changelog  = "https://github.com/natelandau/cartlog/blob/main/CHANGELOG.md"
        Homepage   = "https://github.com/natelandau/cartlog"
        Issues     = "https://github.com/natelandau/cartlog/issues"
        Repository = "https://github.com/natelandau/cartlog"

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.11.21,<0.12.0"]

[dependency-groups]
    dev = [
        "commitizen>=4.16.3",
        "coverage>=7.14.1",
        "duty>=1.9.0",
        "httpx2>=2.4.0",
        "prek>=0.4.4",
        "pytest-clarity>=1.0.1",
        "pytest-cov>=7.1.0",
        "pytest-devtools>=1.2.0",
        "pytest-env>=1.6.0",
        "pytest-mock>=3.15.1",
        "pytest-pretty-terminal>=1.1.0",
        "pytest-sugar>=1.1.1",
        "pytest>=9.1.0",
        "ruff>=0.15.17",
        "ty>=0.0.49",
        "typos>=1.47.2",
        "yamllint>=1.38.0",
    ]

[tool.commitizen]
    bump_message               = "bump(release): v$current_version → v$new_version"
    changelog_merge_prerelease = true
    tag_format                 = "v$version"
    update_changelog_on_bump   = true
    version_provider           = "uv"

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
    exclude_lines = [
        'def __repr__',
        'except [\w\s\._]+ as .*:',
        'pragma: no cover',
        'raise Abort',
        'raise Exit',
        'raise cappa\.Exit',
    ]
    fail_under = 60
    precision = 1
    show_missing = true
    skip_covered = true

[tool.coverage.run]
    branch       = true
    command_line = "--module pytest"
    data_file    = ".cache/coverage"
    source       = ["src"]

[tool.coverage.xml]
    output = ".cache/coverage.xml"

[tool.pytest.ini_options]
    addopts        = "--color=yes --exitfirst --failed-first --strict-config --strict-markers --junitxml=.cache/pytest.xml"
    cache_dir      = ".cache/pytest"
    filterwarnings = ["error", "ignore::DeprecationWarning"]
    testpaths      = ["src", "tests"]
    xfail_strict   = true

[tool.ruff] # https://github.com/charliermarsh/ruff
    exclude        = [".cache", ".git", ".venv", "__pypackages__", "alembic", "dist"]
    fix            = true
    line-length    = 100
    output-format  = "grouped"
    src            = ["src", "tests"]
    target-version = "py314"

    [tool.ruff.lint]
        ignore = [
            "ANN204", # missing return type annotation for special method `__init__`
            "B006",   # mutable-argument-default
            "COM812", # Trailing comma missing
            "CPY001", # Missing copyright notice at top of file
            "D213",   # multi-line-summary-second-line
            "E501",   # line-too-long
            "FIX002", # Line contains TODO, consider resolving the issue
            "S311",   # suspicious-non-cryptographic-random-usage
            "TD002",  # Missing author in TODO
            "TD003",  # Missing issue link on the line following this TODO
            "TRY003", # Long messages outside the exception class (we favor descriptive error messages)
        ]
        per-file-ignores = { "tests/**/*.py" = [
            "A002",
            "A003",
            "ANN001",
            "ANN003",
            "ANN201",
            "ANN202",
            "ARG001",
            "ARG002",
            "ARG005",
            "D102",
            "DOC201",
            "DOC501",  # Raised exception missing from docstring
            "ERA001",
            "F403",
            "PGH003",
            "PLR0913",
            "PLR0917",
            "PLR2004",
            "PLR6301",
            "S101",
            "SLF001",  # Tests may access private module internals
        ], "duties.py" = ["ANN001"] }
        select = ["ALL"]
        unfixable = [
            "ERA001", # Commented out code
            "F401",   # unused-import
            "F841",   # unused-variable
        ]
        [tool.ruff.lint.flake8-bugbear]
            # Typer relies on calling Argument/Option in argument defaults; this is the documented pattern.
            extend-immutable-calls = ["typer.Argument", "typer.Option"]

        [tool.ruff.lint.flake8-type-checking]
            # These frameworks resolve model annotations at runtime, so their imports must
            # stay out of TYPE_CHECKING blocks even when only referenced in annotations.
            runtime-evaluated-base-classes = [
                "cartlog.db.base.Base",
                "pydantic.BaseModel",
                "pydantic_settings.BaseSettings",
                "sqlalchemy.orm.DeclarativeBase",
            ]

        [tool.ruff.lint.mccabe]
            max-complexity = 10

        [tool.ruff.lint.pydocstyle]
            convention = "google"

        [tool.ruff.lint.pylint]
            max-args = 6

    [tool.ruff.format]
        indent-style              = "space"
        line-ending               = "auto"
        quote-style               = "double"
        skip-magic-trailing-comma = false

[tool.ty.terminal]
    error-on-warning = true
